--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,29 @@
-@import url("normalize.css");
+@import url("../style/normalize.css");
 
 body{
-    background-color: rgb(44, 62, 63);
+    background-image: url("../img/bac.png");
+}
+
+.name__title{
+    transition: all .2s ease-in-out;
+}
+
+.name__title:hover{
+    transform: scale(1.1,1.1);
+}
+
+.main__link{
+    text-decoration: none;
+    color: #fabf57
+}
+
+a{
+    text-decoration: none;
+    color: inherit;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
 h1,h2,h3{
@@ -13,12 +35,79 @@ h1,h2,h3{
 
 .header__title{
     display: flex;
-    justify-content: center;
+    margin: 0 auto;
+    max-width: 1200px;
+    justify-content: space-between;
     align-items: center;
-    font-size: 36px;
+    font-size: 22px;
     margin-top: 15px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: rgb(179, 168, 149);
+    color: #fabf57;
+}
+
+.search__films form {
+    width: auto;
+    float: right;
+    margin-right: 30px;
+}
+  
+.search__films input {
+    width: 250px;
+    height: 30px;
+    font-size: 16px;
+    padding-left: 15px;
+    border-radius: 42px;
+    border: 2px solid #444444;
+    background: #444444;
+    outline: none;
+    position: relative;
+    transition: .3s linear;
+}
+  
+.search__films input:focus {
+    width: 300px;
+}
+  
+.search__films button {
+    width: 42px;
+    height: 42px;
+    background: none;
+    border: none;
+    position: absolute;
+    top: -2px;
+    right: 0;
+}
+
+.search__films:after {
+    content:"";
+    clear:both;
+    display:table
+}
+
+.menu__header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.text__menu{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 20px;
+    margin-right: 20px;
+    transition: all .2s ease-in-out;
+}
+
+.text__menu:hover{
+    transform: scale(1.1,1.1);
+}
+
+header{
+    border-bottom: 1px solid rgba(0, 0, 0, 0.131);
+    margin-bottom: -20px;
+}
+
+main{
+    height: 1300px;
 }
 
 .main{
@@ -41,7 +130,7 @@ h1,h2,h3{
 
 select{
     background-color: rgb(54, 54, 54);
-    color: rgb(179, 168, 149);
+    color: #ffffff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     border: solid 10px rgb(54, 54, 54);
     border-radius: 5px;
@@ -54,7 +143,7 @@ select:hover{
 
 .button__refresh{
     background-color: rgb(54, 54, 54);
-    color: #b3a895;
+    color: #ffffff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     border: solid 10px rgb(54, 54, 54);
     border-radius: 5px;
@@ -74,8 +163,15 @@ select:hover{
     justify-content: center;
 }
 
+.info__cart{
+    display: flex;
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
 .container{
     display: flex;
+    margin: 0 auto;
     margin-bottom: 50px;
     width: 300px;
 }
@@ -94,6 +190,7 @@ select:hover{
 }
 
 .title__cart{
+    height: 65px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 27px;
     color: rgb(255, 255, 255);
@@ -130,13 +227,6 @@ select:hover{
     box-shadow: 0px 0px 24px 4px rgba(122, 114, 100, 0.75);
 }
 
-.class1{
-    width: 100px;
-    height: 100px;
-    background-color: #b3a895;
-    color: #b3a895;
-}
-
 .info__films{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(370px, 1fr));
@@ -144,4 +234,58 @@ select:hover{
     margin: 0 auto;
     margin-top: 50px;
     justify-content: center;
+}
+
+footer{
+    border-top: 1px solid rgba(0, 0, 0, 0.131);
+    height: 200px;
+}
+
+.footer__menu{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    max-width: 600px;
+}
+
+.text__footer{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 14px;
+    color: #fabf57;
+    transition: all .2s ease-in-out;
+}
+
+.text__footer:hover{
+    transform: scale(1.1,1.1);
+}
+
+.block{
+    margin: 0 auto;
+    margin-top: 150px;
+    width: 1100px;
+    height: 600px;
+    border-radius: 20px;
+    background-color: #444444;
+}
+
+.title__cart__second{
+    height: 65px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 27px;
+    color: rgb(255, 255, 255);
+    margin-left: 50px;
+    padding-top: 30px;
+}
+.size__image__second{
+    width: 300px;
+    height: 400px;
+    border-radius: 10px;
+    margin-left: 50px;
+}
+
+.description{
+    margin-left: 20px;
+}
+.glue{
+    display: flex;
 }
